# prgrmmd-dragon-watch

./: .env.example  .gitignore  .mcp.json  README.md  dragon_watch_dev.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-02-USER-SETUP.md  01-03-PLAN.md  01-03-SUMMARY.md  01-03-USER-SETUP.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-USER-SETUP.md  01-VERIFICATION.md
.planning/phases/02-intelligence-processing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: demo_fixture.json  generate_demo_fixture.py  load_demo_data.py  migrate_schema.py  run_correlation_demo.py  verify_phase_2.py  verify_phase_3.py  verify_phase_5.py
src/: __init__.py  main.py
src/config/: settings.py
src/database/: __init__.py  client.py
src/demo/: __init__.py  engine.py
src/fetchers/: telegram.py
src/llm/: briefs.py  classification.py  clients.py  config.py  extraction.py  narrative.py  schemas.py  utils.py
src/models/: correlation.py  schemas.py  threat_levels.py
src/processors/: batch_articles.py  batch_posts.py  brief_generator.py  correlate_events.py
src/utils/: __init__.py  geo_utils.py
supabase/: seed.sql
supabase/migrations/: 00001_create_foundation_tables.sql
(+50 files in other folders)
