[project]
name = "dragon-watch"
version = "0.1.0"
description = "Pre-conflict early warning system using OSINT data correlation"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.27.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gdeltdoc>=1.12.0",
    "Telethon>=1.42.0",
    "websockets>=16.0",
    "pydantic>=2.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
